fixed invisible navbar and cards

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,21 +1,14 @@
-.cards {
-  margin: 12em 10vw 2vw 10vw;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
 .card {
   text-align: center;
-  margin: 1em;
   border-radius: 1em;
   border: none;
-  width: 20%;
-  height: 20vw;
+  width: 22rem;
+  height: 100%;
 }
 .card-img {
-  width: 13.5vw;
-  margin-top: 1.4vw;
-  margin-bottom: 0.5vw;
+  width: 85%;
+  margin-top: 1.2em;
+  margin-bottom: 0.5em;
   margin-left: auto;
   margin-right: auto;
 }
@@ -23,17 +16,17 @@
   padding: 1em;
 }
 .card-title {
-  font-size: 1.6vw;
+  font-size: 1.6em;
   font-weight: bold;
   margin: 0;
 }
 .card-btn {
   border: none;
   border-radius: 2em;
-  margin: 1vw 0 0.3vw;
-  padding: 0.5vw 1.2vw;
+  margin: 1em 0 0.3em;
+  padding: 0.5em 1.2em;
   color: white;
-  font-size: 1vw;
+  font-size: 1.2em;
   font-weight: 600;
   background-color: #293241;
 }
@@ -43,32 +36,4 @@
 .card-btn:focus {
   background-color: #ec2840;
   box-shadow: 0 0 0 0.2rem rgb(236 40 64 / 25%);
-}
-@media (max-width: 767.98px) {
-  .cards {
-    margin-top: 3em;
-  }
-  .card {
-    width: 100%;
-    height: 90vw;
-  }
-  .card-img {
-    width: 58vw;
-    margin-top: 5.2vw;
-    margin-bottom: 1vw;
-  }
-  .card-body {
-    padding: 1em;
-  }
-  .card-title {
-    font-size: 8vw;
-    font-weight: bold;
-    margin: 0;
-  }
-  .card-btn {
-    margin: 5vw 0 0.3vw;
-    padding: 2vw 4vw;
-    font-size: 5vw;
-    font-weight: 600;
-  }
 }
