--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,7 +3,8 @@ section {
   padding: 0;
 }
 .body-image {
-  height: 1100px;
+  height: 100%;
+  min-height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../../images/body/trip-master-cover.jpg);
   background-position: center;
@@ -12,6 +13,5 @@ section {
 }
 @media (max-width: 767.98px) {
   .body-image {
-    height: 2000px;
   }
 }
